--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "next": "15.1.0",
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "^3.26.3",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
@@ -57,6 +57,7 @@
     "react-medium-image-zoom": "^5.2.14",
     "recharts": "^2.15.0",
     "resend": "^4.0.1",
+    "sonner": "^2.0.1",
     "stripe": "^17.5.0",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.5.5",
