--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.8.0",
     "@hookform/resolvers": "^4.1.3",
-    "@paypal/react-paypal-js": "^8.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
@@ -28,7 +27,6 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.3",
-    "@react-email/components": "^0.0.31",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.4.0",
     "@uploadthing/react": "^7.1.3",
@@ -56,7 +54,6 @@
     "react-markdown-editor-lite": "^1.3.4",
     "react-medium-image-zoom": "^5.2.14",
     "recharts": "^2.15.0",
-    "resend": "^4.0.1",
     "sonner": "^2.0.1",
     "stripe": "^17.5.0",
     "tailwind": "^4.0.0",
@@ -69,14 +66,24 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@paypal/react-paypal-js": "^8.8.2",
+    "@react-email/components": "^0.0.34",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "add": "^2.0.6",
+    "badge": "^1.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
+    "i": "^0.3.7",
+    "npm": "^11.2.0",
+    "npx": "^10.2.2",
     "postcss": "^8.5.3",
-    "react-email": "^3.0.4",
+    "react-email": "^3.0.7",
+    "resend": "^4.2.0",
+    "shadcn": "^2.4.0-canary.17",
+    "table": "^6.9.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
