--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.2.3",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^5.10.0",
@@ -46,14 +46,14 @@
     "next-themes": "^0.4.6",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^9.0.1",
     "react-markdown-editor-lite": "^1.3.4",
     "react-medium-image-zoom": "^5.2.14",
-    "recharts": "^2.15.0",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.1",
     "stripe": "^17.7.0",
     "tailwind": "^4.0.0",
