--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "@uploadthing/react": "^7.3.0",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
+    "chart": "^0.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
-    "lucide-react": "^0.468.0",
+    "lucide-react": "^0.523.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
     "next": "15.1.0",
@@ -53,7 +54,7 @@
     "react-markdown": "^9.0.1",
     "react-markdown-editor-lite": "^1.3.4",
     "react-medium-image-zoom": "^5.2.14",
-    "recharts": "^2.15.3",
+    "recharts": "^3.0.0",
     "sonner": "^2.0.1",
     "stripe": "^17.7.0",
     "tailwind": "^4.0.0",
@@ -83,7 +84,7 @@
     "postcss": "^8.5.3",
     "react-email": "^3.0.7",
     "resend": "^4.2.0",
-    "shadcn": "^2.4.0-canary.17",
+    "shadcn": "^2.7.0",
     "table": "^6.9.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
